--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
 
 <head>
+    <script src="code.js"></script>
     <title>
         CSC102 Justin Lubitz's Page
     </title>
     <script>
-        alert("This is a test of the alert function");
+        //alert("This is a test of the alert function");
     </script>
     <style>
         body {
-            background-color: forestgreen;
+            background-color: rgb(187, 36, 179);
         }
     </style>
 </head>
@@ -66,5 +67,7 @@
             document.getElementById("countDownTimer").innerHTML = "Blastoff!"; }, 10000);  
    
    </script>
-                                                                                                                       
+   <button onclick="playCraps();">Play Craps!</button>
+ </body>
+
 </html>
