--- a/UATSpacePage.html
+++ b/UATSpacePage.html
@@ -3,35 +3,59 @@
 
 <head>
     <script src="code.js"></script>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title>
         CSC102 Justin Lubitz's Page
     </title>
 </head>
 
 <body>
-    <img src="UATspaceLogo-1.jpg"> <br>
-    <h1>UAT Space Program</h1>
-    <script>
-        document.write("Test of the document.write function");
-    </script>
-    <p>
-        Test of paragraph tags
-    </p> <br>
-   <button onclick="btrBlastOff();">Start</button> 
-    <button>Stop</button> <br>
-<br>
-    <button>Launch</button>
-    <button>Cancel</button> <br>
+    <table>
+        <td><img src="UATspaceLogo-1.jpg"></td>
+        <td><h1>UAT Space Program</h1></td>
+    </table>
+    <table id="data" width="70%" border="2">
+        <thead>
+            <th>Data Type</th>
+            <th>Reading</th>
+        </thead>
+        <tbody>
+            <tr id="Seconds"><td>Time Elapsed</td><td>15 Seconds</td></tr>
+            <tr id="Latitude"><td>Latitude</td><td>0</td></tr>
+            <tr id="Longitude"><td>Longitude</td><td>0</td></tr>
+            <tr id="gpsSensor_alt"><td>GPS Altitude</td><td>0</td></tr>
+            <tr id="bmpSensor_alt" ><td>BMP Sensor Altitude</td><td>30383.04</td></tr>
+            <tr id="bmpSensor_pres"><td>BMP Sensor Pressure</td><td>2.34</td></tr>
+            <tr id="bmpSensor_temp"><td>BMP Sensor Temperature</td><td>0</td></tr>
+            <tr id="digSensor_temp"><td>Digital Sensor Temperature</td><td>24.12</td></tr>
+            <tr id="cssSensor_temp"><td>CSS Sensor Temperature</td><td>25</td></tr>
+            <tr id="cssSensor_eCO2"><td>CSS Sensor eCO2</td><td>400</td></tr>
+            <tr id="cssSensor_TVOC"><td>CSS Sensor TVOC</td><td>0</td></tr>
+            <tr id="UV"><td>UV</td><td>0</td></tr>
+            <tr id="accelX"><td>Accel X</td><td>-0.87</td></tr>
+            <tr id="accelY"><td>Accel Y</td><td>-0.02</td></tr>
+            <tr id="accelZ"><td>Accel Z</td><td>9.61</td></tr>
+            <tr id="magneticX"><td>Magnetic X</td><td>0.13</td></tr>
+            <tr id="magneticY"><td>Magnetic Y</td><td>0.57</td></tr>
+            <tr id="magneticZ"><td>Magnetic Z</td><td>-0.24</td></tr>
+            <tr id="gyroX"><td>Gyro X</td><td>4.66</td></tr>
+            <tr id="gyroY"><td>Gyro Y</td><td>0.01</td></tr>
+            <tr id="gyroZ"><td>Gyro Z</td><td>-0.4</td></tr>
+        </tbody>
+    </table>
+     <br>
+    <button id="startButton" class="button" onclick="start();">Start</button>
+    <button id="stopButton" class="button" onclick="stop();">Stop</button> <br>
+    <br>
     <br>
     <p id="countDownTimer">Waiting to start . . . </p>
     <br>
     <br>
-   <button onclick="playCraps();">Play Craps!</button>
-   <p id="die1Res">Die 1...</p>
-   <p id="die2Res">Die 2...</p>
-   <p id="sum1Res">Sum...</p>
-   <p id="finalRes">Win, Lose, or Draw...</p>
- </body>
+    <button onclick="playCraps();">Play Craps!</button>
+    <p id="die1Res">Die 1...</p>
+    <p id="die2Res">Die 2...</p>
+    <p id="sum1Res">Sum...</p>
+    <p id="finalRes">Win, Lose, or Draw...</p>
+</body>
 
 </html>
