--- a/login.html
+++ b/login.html
@@ -18,7 +18,8 @@
             First Name: <input type="text" id="fName" /> <br>
             Last Name: <input type="text" id="lName" /> <br>
             Badge Number: <input type="number" id="badgeID" /> <br>
-            <input type="submit" onclick="checkCreds();" />
+            <br>
+            <input class="button" type="submit" onclick="checkCreds();" />
         </form>
     </body>
 </html>
