--- a/UATSpacePage-DOM.html
+++ b/UATSpacePage-DOM.html
@@ -21,10 +21,13 @@
 
         //function to load and display data
         function updateDisplay() {
+            console.log("Display time:" + theTime.getHours() + ":"
+                + (theTime.getMinutes() < 10 ? "0" + theTime.getMinutes() : theTime.getMinutes()) + ":"
+                + (theTime.getSeconds() < 10 ? "0" + theTime.getSeconds() : theTime.getSeconds()));
             theTime = new Date;
             var timeRead = data[index].time_seconds;
-            
-            if(timeRead >= 10){
+
+            if (timeRead >= 10) {
                 document.getElementById("data").rows["Seconds"].innerHTML = dataRow("Time Elapsed", data[index].time_seconds, "seconds");
                 document.getElementById("data").rows["Latitude"].innerHTML = dataRow("Latitude", data[index].latitude, " ");
                 document.getElementById("data").rows["Longitude"].innerHTML = dataRow("Longitude", data[index].longitude, " ");
@@ -46,15 +49,18 @@
                 document.getElementById("data").rows["gyroX"].innerHTML = dataRow("gyroX", data[index].gyroX, " ");
                 document.getElementById("data").rows["gyroY"].innerHTML = dataRow("gyroY", data[index].gyroY, " ");
                 document.getElementById("data").rows["gyroZ"].innerHTML = dataRow("gyroZ", data[index].time_seconds, " ");
-                if (index < 500){
+                document.getElementById("clockTime").innerHTML = "Display time: " + theTime.getHours() + ":"
+                    + (theTime.getMinutes() < 10 ? "0" + theTime.getMinutes() : theTime.getMinutes()) + ":"
+                    + (theTime.getSeconds() < 10 ? "0" + theTime.getSeconds() : theTime.getSeconds());
+                if (index < 500) {
                     index++;
                 } else {
                     index = 0;
                 }
             }
-        } 
+        }
 
-        
+
     </script>
     <title>
         CSC102 Justin Lubitz's Page
@@ -64,7 +70,9 @@
 <body>
     <table>
         <td><img src="UATspaceLogo-1.jpg"></td>
-        <td><h1>UAT Space Program</h1></td>
+        <td>
+            <h1>UAT Space Program</h1>
+        </td>
     </table>
     <table id="data" width="70%" border="2">
         <thead>
@@ -76,7 +84,7 @@
             <tr id="Latitude"></tr>
             <tr id="Longitude"></tr>
             <tr id="gpsSensor_alt"></tr>
-            <tr id="bmpSensor_alt" ></tr>
+            <tr id="bmpSensor_alt"></tr>
             <tr id="bmpSensor_pres"></tr>
             <tr id="bmpSensor_temp"></tr>
             <tr id="digSensor_temp"></tr>
@@ -95,7 +103,9 @@
             <tr id="gyroZ"></tr>
         </tbody>
     </table>
-     <br>
+    <br>
+    <p id="clockTime">Displays time when running</p>
+    <br>
     <button id="startButton" class="button" onclick="start();">Start</button>
     <button id="stopButton" class="button" onclick="stop();">Stop</button> <br>
     <br>
